--- a/SFR/SFR.csproj
+++ b/SFR/SFR.csproj
@@ -44,53 +44,53 @@
     </Reference>
     <Reference Include="Box2D.XNA">
       <HintPath>..\SFD\Box2D.XNA.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Lidgren.Network">
       <HintPath>..\SFD\Lidgren.Network.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework">
       <HintPath>..\XNA\Microsoft.Xna.Framework.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework.Game">
       <HintPath>..\XNA\Microsoft.Xna.Framework.Game.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework.Graphics">
       <HintPath>..\XNA\Microsoft.Xna.Framework.Graphics.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="mscorlib">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="SFD.GameScriptInterface">
       <HintPath>..\SFD\SFD.GameScriptInterface.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="SFD.ScriptEngine">
       <HintPath>..\SFD\SFD.ScriptEngine.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Superfighters Deluxe">
       <HintPath>..\SFD\Core.dll</HintPath>
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System.Drawing">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System.IO.Compression">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System.IO.Compression.FileSystem">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
     <Reference Include="System.Windows.Forms">
-      <Private>False</Private>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
