--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,10 @@ jobs:
         vcpkg install raygui:x64-windows-static
         vcpkg integrate install
 
+    # Restore dependencies
+    - name: Restore NuGet
+      run: msbuild -p:RestorePackagesConfig=true -t:restore
+
     # Build solution
     - name: Build Solution
       run: msbuild $env:Solution_Name /t:build /p:configuration=${{ matrix.configuration }}
