--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,7 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
 
-    # Install dependencies for editor
-    - name: Setup vcpkg
-      run: |
-        vcpkg install raylib:x64-windows-static
-        vcpkg install raygui:x64-windows-static
-        vcpkg integrate install
-
-    # Restore dependencies
+    # Restore packages
     - name: Restore NuGet
       run: msbuild -p:RestorePackagesConfig=true -t:restore
 
