--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: SFR ${{ matrix.configuration }}
-        path: "*.exe"
+        path: D:\a\SFR\SFR\SFR\bin\x86\Release\SFR.exe
         compression-level: 9 
